--- a/JSB-OnlineStore/appsettings.Development.json
+++ b/JSB-OnlineStore/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\sqlexpress;Database=JSBOnlineStoreDB;Integrated Security=True;TrustServerCertificate=True"
   }
 }
